--- a/src/main/resources/templates/announcement-details.html
+++ b/src/main/resources/templates/announcement-details.html
@@ -6,6 +6,10 @@
 <body>
 <div>
     <p>Title: <span th:text="${announcement.title}"></span></p>
+    <p>Creation Date: <span th:text="${#temporals.format(announcement.creationDate, 'dd.MM.yyyy HH:mm')}"></span></p>
+    <div th:each="image : ${images}">
+        <img th:src="@{/images/{id}(id=${image.id})}" height="60px" alt=""/><br>
+    </div>
     <p>Category: <span th:text="${announcement.category}"></span></p>
     <p>City: <span th:text="${announcement.city}"></span></p>
     <p>Description: <span th:text="${announcement.description}"></span></p>
