--- a/src/main/resources/templates/add-announcement.html
+++ b/src/main/resources/templates/add-announcement.html
@@ -17,6 +17,17 @@
         <option value="Purchase">Purchase</option>
     </select><br>
 
+    <div>
+        <label for="price" >Price:</label>
+        <input type="number" id="price" name="price" required>
+        <label for="currency">Currency</label>
+        <select id="currency" name="currency" required>
+            <option value="USD">USD</option>
+            <option value="EUR">EUR</option>
+            <option value="UAH">UAH</option>
+        </select>
+    </div>
+
     <label for="city">City:</label>
     <input type="text" id="city" name="city" required><br>
 
