--- a/src/main/resources/templates/announcement-category.html
+++ b/src/main/resources/templates/announcement-category.html
@@ -10,6 +10,16 @@
     <input type="hidden" id="category" name="category" th:value="${category}"/>
     <button type="submit">Search</button>
 </form>
+<form th:action="@{/filter/{category}(category=${category})}" method="get">
+    <label for="sort">Sort by:</label>
+    <select id="sort" name="sort">
+        <option value="priceAscending">Price: Low to High</option>
+        <option value="priceDescending">Price: High to Low</option>
+        <option value="dateAscending">Date: Old to New</option>
+        <option value="dateDescending">Date: New to Old</option>
+    </select>
+    <button type="submit">Sort</button>
+</form>
 <table>
     <thead>
     <tr th:if="${#lists.isEmpty(announcements)}">
