--- a/src/main/resources/templates/announcement-details.html
+++ b/src/main/resources/templates/announcement-details.html
@@ -7,6 +7,7 @@
 <div>
     <p>Title: <span th:text="${announcement.title}"></span></p>
     <p>Creation Date: <span th:text="${#temporals.format(announcement.creationDate, 'dd.MM.yyyy HH:mm')}"></span></p>
+    <p>Author: <span th:text="${announcement.user.name + ' ' + announcement.user.surname}"></span></p>
     <div th:each="image : ${images}">
         <img th:src="@{/images/{id}(id=${image.id})}" height="60px" alt=""/><br>
     </div>
@@ -22,7 +23,7 @@
     <p>City: <span th:text="${announcement.city}"></span></p>
     <p>Description: <span th:text="${announcement.description}"></span></p>
 </div>
-<form th:action="@{'/delete/' + ${announcement.id}}" method="post">
+<form th:if="${announcement.user.email == user.email}" th:action="@{'/delete/' + ${announcement.id}}" method="post">
     <button type="submit">Delete Announcement</button>
 </form>
 <form th:action="@{/}" method="get">
