Added admin page

--- a/src/main/resources/templates/add-announcement.html
+++ b/src/main/resources/templates/add-announcement.html
@@ -45,8 +45,8 @@
 
     <button type="submit">Add Announcement</button>
 </form>
-<form th:action="@{/}" method="get">
-    <button type="submit">Turn Back</button>
-</form>
+<a th:href="@{/}">
+    <button type="submit">Back To Main Page</button>
+</a>
 </body>
 </html>
