--- a/src/main/resources/templates/announcement-category.html
+++ b/src/main/resources/templates/announcement-category.html
@@ -12,6 +12,9 @@
         <button type="submit">Log out</button>
         <p>Current User: <span th:text="${user.name + ' ' + user.surname}"></span></p>
     </form>
+    <a th:if="${user.isAdmin()}" th:href="@{/admin}">
+        <button type="submit">Admin Panel</button>
+    </a>
 </div>
 <form th:action="@{/filter}" method="post">
     <label for="title">Search by Title:</label>
@@ -56,8 +59,8 @@
     </tr>
     </tbody>
 </table>
-<form th:action="@{/}" method="get">
-    <button type="submit">Turn Back</button>
-</form>
+<a th:href="@{/}">
+    <button type="submit">Back To Main Page</button>
+</a>
 </body>
 </html>
