--- a/src/main/resources/templates/announcement-details.html
+++ b/src/main/resources/templates/announcement-details.html
@@ -7,7 +7,11 @@
 <div>
     <p>Title: <span th:text="${announcement.title}"></span></p>
     <p>Creation Date: <span th:text="${#temporals.format(announcement.creationDate, 'dd.MM.yyyy HH:mm')}"></span></p>
-    <p>Author: <span th:text="${announcement.user.name + ' ' + announcement.user.surname}"></span></p>
+    <p>Author:
+        <a th:href="@{'/user/' + ${announcement.user.id}}">
+        <span th:text="${announcement.user.name + ' ' + announcement.user.surname}"></span>
+        </a>
+    </p>
     <div th:each="image : ${images}">
         <img th:src="@{/images/{id}(id=${image.id})}" height="60px" alt=""/><br>
     </div>
@@ -26,8 +30,8 @@
 <form th:if="${announcement.user.email == user.email}" th:action="@{'/delete/' + ${announcement.id}}" method="post">
     <button type="submit">Delete Announcement</button>
 </form>
-<form th:action="@{/}" method="get">
-    <button type="submit">Turn Back</button>
-</form>
+<a th:href="@{/}">
+    <button type="submit">Back To Main Page</button>
+</a>
 </body>
 </html>
