Added Mail Sender

--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -7,7 +7,7 @@
 <h4>Login</h4>
 <form th:action="@{/login}" method="post">
     <label for="email">Email:</label>
-    <input id="email" type="text" name="username" required><br><br>
+    <input id="email" type="email" name="username" required><br><br>
 
     <label for="password">Password:</label>
     <input id="password" type="text" name="password" required><br><br>
