--- a/src/main/resources/templates/registration-page.html
+++ b/src/main/resources/templates/registration-page.html
@@ -13,7 +13,7 @@
     <input id="surname" type="text" name="surname" required><br><br>
 
     <label for="email">Email:</label>
-    <input id="email" type="text" name="email" required><br><br>
+    <input id="email" type="email" name="email" required><br><br>
 
     <label for="password">Password:</label>
     <input id="password" type="text" name="password" required><br><br>
